Fix ordering of properties in spacing override classes
We incorrectly shipped static spacing override classes in the format
`govuk-!-padding-static` and `govuk-!-margin-static`, when we intended
them to be in the format `govuk-!-static`.

Our documentation refers to `govuk-!static`. We should update the classes to match,
but keep the existing classes for now as people may already be using them.

--- a/src/govuk/overrides/_spacing.scss
+++ b/src/govuk/overrides/_spacing.scss
@@ -61,6 +61,14 @@ $_spacing-directions: (
 /// Generate spacing override classes for the given property (e.g. margin)
 /// for each point in the non-responsive spacing scale.
 ///
+/// The classes in the format govuk-#{$property}-static-#{$spacing-point}
+/// and govuk-\!-#{$property}-#{$direction}-static-#{$spacing-point} are deprecated.
+/// For example: govuk-!-margin-static-2 or govuk-!-margin-top-static-2
+///
+/// Use classes in the format .govuk-\!-static-#{$property}-#{$spacing-point}
+/// and .govuk-\!-static-#{$property}-#{$direction}-#{$spacing-point} instead.
+/// For example: govuk-!-static-margin-2 or govuk-!-static-margin-top-2
+///
 /// @param {String} $property - Property to add spacing to (e.g. 'margin')
 ///
 /// @example css
@@ -71,13 +79,14 @@ $_spacing-directions: (
 /// @access private
 @mixin _govuk-generate-static-spacing-overrides($property) {
   @each $spacing-point in map-keys($govuk-spacing-points) {
-    .govuk-\!-#{$property}-static-#{$spacing-point} {
+    .govuk-\!-#{$property}-static-#{$spacing-point},
+    .govuk-\!-static-#{$property}-#{$spacing-point} {
       #{$property}: govuk-spacing($spacing-point) !important;
     }
 
     @each $direction in $_spacing-directions {
-
-      .govuk-\!-#{$property}-#{$direction}-static-#{$spacing-point} {
+      .govuk-\!-#{$property}-#{$direction}-static-#{$spacing-point},
+      .govuk-\!-static-#{$property}-#{$direction}-#{$spacing-point} {
         #{$property}-#{$direction}: govuk-spacing($spacing-point) !important;
       }
     }
